# alfred_agent

./: .gitignore  README.md  pyproject.toml  retrievers.py
data/: data.json
smolagent/: app.py  retrievers.py  tools.py
